--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
    <h3>
-         <a href = "{{ url_for('index') }}">Booking Cancellation Predictor</a>
+      Booking Cancellation Predictor
    </h3>
 
    <h4>
