Added table in response page

--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -12,6 +12,8 @@
 
     <div class="alert alert-danger" role="alert">
   <p class="alert-link">We're sorry. There was a problem accessing the database. Please try back later. </p>
+  <p class="alert-link">There was a problem accessing the database. </p>
+  <p class="alert-link">Please try again. </p>
     </div>
 
 </body>
