--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,7 +30,7 @@
           <input type="number" id="arrival_day_of_month" name="arrival_day_of_month">
    <br />
    <br />
-         <label for="arrival_week_number">3. Please enter the arrival week number:</label>
+         <label for="arrival_week_number">3. Please enter the arrival week number (1-53):</label>
          <input type="number" id="arrival_week_number" name="arrival_week_number">
    <br />
 
