--- a/app/templates/predict.html
+++ b/app/templates/predict.html
@@ -39,14 +39,17 @@
         }
       table {
           border-collapse: collapse;
-          border: 1px solid;
+          border: 2px solid;
           width: 100%;
           color: #c1c5d0;
           font-family: monaco; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px;
           font-size: 20px;
           opacity: 1.0;
           text-align: center;
+          padding: 15px;
         }
+      tr:hover {background-color: #1f172e;}
+      th {background-color: #1f172e;}
     </style>
 
     <link href="static/basic.css" rel="stylesheet">
