--- a/app/templates/error.html
+++ b/app/templates/error.html
@@ -11,7 +11,7 @@
     </h3>
 
     <div class="alert alert-danger" role="alert">
-  <p class="alert-link">We're sorry. There was a problem accessing the database. Please try back later. </p>
+  <p class="alert-link">We're sorry. </p>
   <p class="alert-link">There was a problem accessing the database. </p>
   <p class="alert-link">Please try again. </p>
     </div>
